--- a/GenAI.Core/GenAI.Core/GenAI.Core.csproj
+++ b/GenAI.Core/GenAI.Core/GenAI.Core.csproj
@@ -43,14 +43,17 @@
     <Compile Include="Enums\EndState.cs" />
     <Compile Include="HighLevelStateMachine.cs" />
     <Compile Include="IdleStateMachine.cs" />
+    <Compile Include="Interfaces\IAmAlive.cs" />
     <Compile Include="Interfaces\IAmNoizy.cs" />
     <Compile Include="Interfaces\IAmSmelling.cs" />
     <Compile Include="Interfaces\IAmVisible.cs" />
+    <Compile Include="Interfaces\IHavePosition.cs" />
     <Compile Include="Interfaces\IHaveStates.cs" />
     <Compile Include="LowLevelStateMachine.cs" />
     <Compile Include="MainGoalStateMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KamikazeStrategyStateMachine.cs" />
+    <Compile Include="Utils\Vector3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
