--- a/GenAI.Models/GenAI.Models.csproj
+++ b/GenAI.Models/GenAI.Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B56BF38F-F907-4ABA-BAF6-0D15C01100FA}</ProjectGuid>
+    <ProjectGuid>{26F02259-37E3-4D48-990B-F7DEB56783A6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GenAI.Core</RootNamespace>
-    <AssemblyName>GenAI.Core</AssemblyName>
+    <RootNamespace>GenAI.Models</RootNamespace>
+    <AssemblyName>GenAI.Models</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,24 +39,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseStateMachine.cs" />
-    <Compile Include="Enums\AttackStrategy.cs" />
-    <Compile Include="Enums\EndState.cs" />
-    <Compile Include="Enums\GeneKey.cs" />
-    <Compile Include="Enums\Goal.cs" />
-    <Compile Include="HighLevelStateMachine.cs" />
-    <Compile Include="FeedStateMachine.cs" />
-    <Compile Include="Interfaces\IAmAlive.cs" />
-    <Compile Include="Interfaces\IAmNoizy.cs" />
-    <Compile Include="Interfaces\IAmSmelling.cs" />
-    <Compile Include="Interfaces\IAmVisible.cs" />
-    <Compile Include="Interfaces\IHavePosition.cs" />
-    <Compile Include="Interfaces\IHaveStates.cs" />
-    <Compile Include="LowLevelStateMachine.cs" />
-    <Compile Include="MainGoalStateMachine.cs" />
+    <Compile Include="BaseCharacter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AttackStateMachine.cs" />
-    <Compile Include="Utils\Vector3.cs" />
+    <Compile Include="ZergCharacter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GenAI.Core\GenAI.Core\GenAI.Core.csproj">
+      <Project>{b56bf38f-f907-4aba-baf6-0d15c01100fa}</Project>
+      <Name>GenAI.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
