--- a/GA/GA.csproj
+++ b/GA/GA.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MathNet.Numerics">
-      <HintPath>..\Ext\MathNet.Numerics.dll</HintPath>
+      <HintPath>..\Libs\MathNet.Numerics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
