IAmVisible and IAmSmelling interfaces implemented

--- a/GenAI.Core/GenAI.Core/GenAI.Core.csproj
+++ b/GenAI.Core/GenAI.Core/GenAI.Core.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Enums\GeneKey.cs" />
     <Compile Include="Enums\Goal.cs" />
     <Compile Include="Enums\RetreatStrategy.cs" />
+    <Compile Include="Enums\Scent.cs" />
     <Compile Include="Enums\ServeStrategy.cs" />
     <Compile Include="HighLevelStateMachine.cs" />
     <Compile Include="FeedStateMachine.cs" />
