Characters Goal Priorities base implementation
My own state machines moved into subfolder; "Stateless" library included
(my own will be replaced by it); Goal, Strategy and Action Triggers
implemented.

--- a/GenAI.Models/GenAI.Models.csproj
+++ b/GenAI.Models/GenAI.Models.csproj
@@ -30,6 +30,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathNet.Numerics, Version=2011.4.17.0, Culture=neutral, PublicKeyToken=cd8b63ad3d691a37, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libs\MathNet.Numerics.dll</HintPath>
+    </Reference>
+    <Reference Include="Stateless">
+      <HintPath>..\GenAI.Core\packages\stateless-4.0.2.3.1.1\lib\net40\Stateless.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +55,9 @@
       <Project>{b56bf38f-f907-4aba-baf6-0d15c01100fa}</Project>
       <Name>GenAI.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
