--- a/GenAI.Core/GenAI.Core/GenAI.Core.csproj
+++ b/GenAI.Core/GenAI.Core/GenAI.Core.csproj
@@ -33,6 +33,9 @@
     <Reference Include="MathNet.Numerics">
       <HintPath>..\..\Libs\MathNet.Numerics.dll</HintPath>
     </Reference>
+    <Reference Include="Stateless">
+      <HintPath>..\packages\stateless-4.0.2.3.1.1\lib\net40\Stateless.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,29 +45,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseStateMachine.cs" />
+    <Compile Include="HFSM\BaseStateMachine.cs" />
     <Compile Include="Enums\AttackStrategy.cs" />
-    <Compile Include="Enums\EndState.cs" />
+    <Compile Include="Enums\SimpleAction.cs" />
     <Compile Include="Enums\FeedStrategy.cs" />
     <Compile Include="Enums\GeneKey.cs" />
     <Compile Include="Enums\Goal.cs" />
     <Compile Include="Enums\RetreatStrategy.cs" />
     <Compile Include="Enums\Scent.cs" />
     <Compile Include="Enums\ServeStrategy.cs" />
-    <Compile Include="HighLevelStateMachine.cs" />
-    <Compile Include="FeedStateMachine.cs" />
+    <Compile Include="HFSM\HighLevelStateMachine.cs" />
+    <Compile Include="HFSM\FeedStateMachine.cs" />
     <Compile Include="Interfaces\IAmAlive.cs" />
     <Compile Include="Interfaces\IAmNoizy.cs" />
     <Compile Include="Interfaces\IAmSmelling.cs" />
     <Compile Include="Interfaces\IAmVisible.cs" />
     <Compile Include="Interfaces\IHavePosition.cs" />
     <Compile Include="Interfaces\IHaveStates.cs" />
-    <Compile Include="LowLevelStateMachine.cs" />
-    <Compile Include="MainGoalStateMachine.cs" />
+    <Compile Include="HFSM\LowLevelStateMachine.cs" />
+    <Compile Include="HFSM\MainGoalStateMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AttackStateMachine.cs" />
+    <Compile Include="HFSM\AttackStateMachine.cs" />
     <Compile Include="Utils\RandomHelper.cs" />
     <Compile Include="Utils\Vector3.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
